test/tests/errors/error-class-cannot-access-private.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        private var x: int = 1;
    }

    const a: T = new T();
    output a.x;
}